@@ -358,6 +358,16 @@ const run = async (): Promise<void> => {
   {
     const outDir = mkTmp();
     const tmp = mkTmp();
+    const badMsi = path.join(tmp, "bad.msi");
+    fs.writeFileSync(badMsi, "not-a-cfb-msi", "utf8");
+    const res = await runCliCapture(["safe-run", badMsi, "--out", outDir, "--adapter", "package"]);
+    assertEq(res.status, 40, "safe-run should fail closed for package msi header mismatch");
+    assert(res.stderr.includes("PACKAGE_FORMAT_MISMATCH"), "expected PACKAGE_FORMAT_MISMATCH on stderr for bad msi");
+  }
+
+  {
+    const outDir = mkTmp();
+    const tmp = mkTmp();
     const badMsix = path.join(tmp, "bad.msix");
     fs.writeFileSync(badMsix, "not-a-zip-msix", "utf8");
     const res = await runCliCapture(["safe-run", badMsix, "--out", outDir, "--adapter", "package"]);
